accordion small issue fixed

--- a/assets/css/widgets/accordion.css
+++ b/assets/css/widgets/accordion.css
@@ -89,7 +89,7 @@
 }
 .ua_accordion_item .ua_accordion_panel {
     display: none;
-    padding-top: 30px;
+    margin-top: 30px;
 }
 .ua_accordion_item.ua-active .ua_accordion_title::before {
     transform: rotate(-140deg);
@@ -137,7 +137,7 @@
     margin-bottom: 10px;
 }
 .ua_accordion_item.ua_accordion_style_08 .ua_accordion_panel {
-    padding-top: 26px;
+    margin-top: 26px;
 }
 .ua_accordion_style_08 .ua-icon {
     color: #060a24;
